tentative version of ucb and weight

--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,12 @@ PORT=4000
 
 # Optional Smart Path managing system base URL.
 # Leave blank to use mock data; set to a real URL (e.g. https://smartpath.example/api) to proxy.
-MANAGING_BASE_URL="https://adaptive-analyzer-acmeair-group3.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud"
+MANAGING_BASE_URL=https://adaptive-analyzer-acmeair-group3.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud
+
+
+WORKLOAD_API_KEY=ece750t37
+LOCUST_BIN=/Users/evan/VSCodeProjects/smart-path-dashboard/.venv/bin/locust
+WORKLOAD_ALLOWED_HOSTS=https://adaptive-gateway-acmeair-group3.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud
+LOCUST_FILE_PATH=/Users/evan/VSCodeProjects/smart-path-dashboard/locustfile.py
+WORKLOAD_OUTPUT_DIR=/Users/evan/VSCodeProjects/smart-path-dashboard/reports
+
