--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
-# Backend base URL the frontend uses to reach the API
-VITE_BACKEND_BASE_URL=http://localhost:4000
+VITE_BACKEND_BASE_URL=http://localhost:4000 
+VITE_WORKLOAD_API_KEY=ece750t37
+VITE_DEFAULT_WORKLOAD_HOST=https://adaptive-gateway-acmeair-group3.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud
+
