--- a/backend/.env
+++ b/backend/.env
@@ -7,8 +7,8 @@ MANAGING_BASE_URL=https://adaptive-analyzer-acmeair-group3.mycluster-ca-tor-1-83
 
 
 WORKLOAD_API_KEY=ece750t37
-LOCUST_BIN=/Users/evan/VSCodeProjects/smart-path-dashboard/.venv/bin/locust
+LOCUST_BIN=.venv/bin/locust
 WORKLOAD_ALLOWED_HOSTS=https://adaptive-gateway-acmeair-group3.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud
-LOCUST_FILE_PATH=/Users/evan/VSCodeProjects/smart-path-dashboard/locustfile.py
-WORKLOAD_OUTPUT_DIR=/Users/evan/VSCodeProjects/smart-path-dashboard/reports
-
+# Relative to repo root so it works anywhere this service starts from
+LOCUST_FILE_PATH=./locustfile.py
+WORKLOAD_OUTPUT_DIR=./reports
