--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Install oc
         uses: redhat-actions/oc-installer@v1
         with:
-          version: "4.15"
+          oc_version: "4.15"
 
       - name: Login to OpenShift
         uses: redhat-actions/oc-login@v1
