--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,9 +10,11 @@ RUN npm run build
 FROM node:22-alpine
 WORKDIR /app
 ENV NODE_ENV=production
+# Allow pip to install system-wide in Alpine's externally-managed env
+ENV PIP_BREAK_SYSTEM_PACKAGES=1
 # Install locust and python runtime used by workload runner
-RUN apk add --no-cache python3 py3-pip && \
-  PIP_BREAK_SYSTEM_PACKAGES=1 python3 -m pip install --no-cache-dir locust
+RUN apk add --no-cache python3 py3-pip python3-dev build-base libffi-dev openssl-dev && \
+  python3 -m pip install --no-cache-dir locust
 COPY --from=deps /app/node_modules ./node_modules
 COPY --from=build /app/dist ./dist
 COPY package*.json ./
