--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -23,6 +23,13 @@ spec:
                 name: smart-path-backend-config
             - secretRef:
                 name: smart-path-backend-secrets
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
           readinessProbe:
             httpGet:
               path: /health
