--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: default-route-openshift-image-registry.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud/acmeair-group3/smart-path-backend:latest
+          image: image-registry.openshift-image-registry.svc:5000/acmeair-group3/smart-path-backend:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4000
