--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,5 +9,8 @@ ENV VITE_BACKEND_BASE_URL=$VITE_BACKEND_BASE_URL
 RUN npm run build
 
 FROM nginx:1.27-alpine
+RUN mkdir -p /var/cache/nginx /var/run /var/log/nginx && \
+  chown -R root:0 /var/cache/nginx /var/run /var/log/nginx /etc/nginx/conf.d /usr/share/nginx/html && \
+  chmod -R g+rwX /var/cache/nginx /var/run /var/log/nginx /etc/nginx/conf.d /usr/share/nginx/html
 COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
