--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,7 @@ env:
   BACKEND_IMAGE_NAME: smart-path-backend
   FRONTEND_IMAGE_NAME: smart-path-frontend
   OPENSHIFT_SERVER_FALLBACK: https://c104-e.ca-tor.containers.cloud.ibm.com:30689
+  FRONTEND_BACKEND_URL: https://smart-path-backend-acmeair-group3.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud
 
 jobs:
   build-and-deploy:
@@ -54,7 +55,11 @@ jobs:
 
       - name: Build and push frontend image
         run: |
-          docker build -t ${{ steps.vars.outputs.frontend_image }} -t ${REGISTRY_HOST}/${NAMESPACE}/${FRONTEND_IMAGE_NAME}:latest frontend
+          docker build \
+            --build-arg VITE_BACKEND_BASE_URL=${FRONTEND_BACKEND_URL} \
+            --build-arg VITE_WORKLOAD_API_KEY=${{ secrets.FRONTEND_WORKLOAD_API_KEY }} \
+            -t ${{ steps.vars.outputs.frontend_image }} \
+            -t ${REGISTRY_HOST}/${NAMESPACE}/${FRONTEND_IMAGE_NAME}:latest frontend
           docker push ${{ steps.vars.outputs.frontend_image }}
           docker push ${REGISTRY_HOST}/${NAMESPACE}/${FRONTEND_IMAGE_NAME}:latest
 
