--- a/k8s/backend-configmap.yaml
+++ b/k8s/backend-configmap.yaml
@@ -7,6 +7,6 @@ data:
   MANAGING_BASE_URL: "https://adaptive-analyzer-acmeair-group3.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud"
   LOCUST_FILE_PATH: "./locustfile.py"
   WORKLOAD_OUTPUT_DIR: "/app/reports"
-  LOCUST_BIN: ".venv/bin/locust"
+  LOCUST_BIN: "locust"
   WORKLOAD_ALLOWED_HOSTS: "https://adaptive-gateway-acmeair-group3.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud"
   ALLOWED_ORIGINS: ""
