--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,6 +8,7 @@ on:
 
 env:
   REGISTRY_HOST: default-route-openshift-image-registry.mycluster-ca-tor-1-835845-04e8c71ff333c8969bc4cbc5a77a70f6-0000.ca-tor.containers.appdomain.cloud
+  CLUSTER_REGISTRY_HOST: image-registry.openshift-image-registry.svc:5000
   NAMESPACE: acmeair-group3
   BACKEND_IMAGE_NAME: smart-path-backend
   FRONTEND_IMAGE_NAME: smart-path-frontend
@@ -39,8 +40,10 @@ jobs:
         run: |
           TAG=$(git rev-parse --short HEAD)
           echo "tag=$TAG" >> $GITHUB_OUTPUT
-          echo "backend_image=${REGISTRY_HOST}/${NAMESPACE}/${BACKEND_IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
-          echo "frontend_image=${REGISTRY_HOST}/${NAMESPACE}/${FRONTEND_IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
+          echo "backend_image_push=${REGISTRY_HOST}/${NAMESPACE}/${BACKEND_IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
+          echo "frontend_image_push=${REGISTRY_HOST}/${NAMESPACE}/${FRONTEND_IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
+          echo "backend_image_deploy=${CLUSTER_REGISTRY_HOST}/${NAMESPACE}/${BACKEND_IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
+          echo "frontend_image_deploy=${CLUSTER_REGISTRY_HOST}/${NAMESPACE}/${FRONTEND_IMAGE_NAME}:${TAG}" >> $GITHUB_OUTPUT
 
       - name: Docker login to OpenShift registry
         run: |
@@ -49,8 +52,8 @@ jobs:
 
       - name: Build and push backend image
         run: |
-          docker build -t ${{ steps.vars.outputs.backend_image }} -t ${REGISTRY_HOST}/${NAMESPACE}/${BACKEND_IMAGE_NAME}:latest backend
-          docker push ${{ steps.vars.outputs.backend_image }}
+          docker build -t ${{ steps.vars.outputs.backend_image_push }} -t ${REGISTRY_HOST}/${NAMESPACE}/${BACKEND_IMAGE_NAME}:latest backend
+          docker push ${{ steps.vars.outputs.backend_image_push }}
           docker push ${REGISTRY_HOST}/${NAMESPACE}/${BACKEND_IMAGE_NAME}:latest
 
       - name: Build and push frontend image
@@ -58,9 +61,9 @@ jobs:
           docker build \
             --build-arg VITE_BACKEND_BASE_URL=${FRONTEND_BACKEND_URL} \
             --build-arg VITE_WORKLOAD_API_KEY=${{ secrets.FRONTEND_WORKLOAD_API_KEY }} \
-            -t ${{ steps.vars.outputs.frontend_image }} \
+            -t ${{ steps.vars.outputs.frontend_image_push }} \
             -t ${REGISTRY_HOST}/${NAMESPACE}/${FRONTEND_IMAGE_NAME}:latest frontend
-          docker push ${{ steps.vars.outputs.frontend_image }}
+          docker push ${{ steps.vars.outputs.frontend_image_push }}
           docker push ${REGISTRY_HOST}/${NAMESPACE}/${FRONTEND_IMAGE_NAME}:latest
 
       - name: Apply manifests
@@ -72,5 +75,5 @@ jobs:
 
       - name: Update deployments to new images
         run: |
-          oc set image deployment/smart-path-backend backend=${{ steps.vars.outputs.backend_image }}
-          oc set image deployment/smart-path-frontend frontend=${{ steps.vars.outputs.frontend_image }}
+          oc set image deployment/smart-path-backend backend=${{ steps.vars.outputs.backend_image_deploy }}
+          oc set image deployment/smart-path-frontend frontend=${{ steps.vars.outputs.frontend_image_deploy }}
